assets/css/meyawo.css
/* ... */
.infos .title,
.infos .socials {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

.infos .title .subtitle,
.infos .socials .subtitle {
  font-size: 14px;
  opacity: .9;
}

.infos .title .font-small {
  color: #fff;
  font-size: 13px;
}

.infos .subtitle {
  margin: 2px;
}

.infos .subtitle i {
  width: 20px;
  display: inline-block;
  position: relative;
  top: 2px;
}

.infos .social-links a {
  font-size: 14px;
  color: #fff;
}

.infos .social-links a:hover {
  color: #695aa6;
}

/* contact section */
.list {
  list-style-type: none;
  padding-left: 0;
  padding: 0 30px;
}

.list .list-head {
  border-bottom: 1px solid #dee2e6;
  padding-bottom: 6px;
}

.list .list-body {
  padding-top: 6px;
}

.list .list-body p {
  margin-bottom: 5px;
}

.list .list-body p i {
  display: inline-block;
  width: 20px;
}

.list .list-body a {
  display: block;
  text-decoration: none;
  margin-bottom: 4px;
}

.list .list-body .social-links {
  margin-top: 15px;
}

.list .list-body .social-links a {
  display: inline;
  padding: 0 8px 0 0;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 500;
  font-family: 'Baloo Paaji', cursive;
  color: #695aa6;
}

.my-font {
  font-family: 'Baloo Paaji', cursive;
}

p {
  font-size: calc(13px + (15 - 13) * ((100vw - 300px) / (1300 - 300)));
  font-weight: 100;
  opacity: 1;
  color: #111;
  letter-spacing: .6px;
}

.xs-font {
  font-size: 13px;
  opacity: .5;
}

.title {
  font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1300 - 300)));
}

.title.big {
  font-size: calc(17px + (25 - 17) * ((100vw - 300px) / (1300 - 300)));
}

.mb-6 {
  margin-bottom: 4rem !important;
}

.img-responsive {
  width: 100% !important;
}

.rounded {
  border-radius: 4px;
}

.breadcrumb {
  font-size: 0.9rem;
}

.breadcrumb .breadcrumb-item a {
  color: #212529;
}

.breadcrumb .breadcrumb-item.active {
  color: #495057;
}

.btn-rounded {
  border-radius: 100px;
}

.service-card {
  position: relative;
  min-height: 230px;
  border: 1px solid #dee2e6;
  overflow: hidden;
  border-radius: 3px;
  margin-top: 15px;
}

.service-card .body {
  padding: 10px;
}

.service-card .body img.icon {
  margin-top: 40px;
  width: 80px;
  margin-bottom: 25px;
  -webkit-transition: all, 0.3s;
  transition: all, 0.3s;
}

@media (prefers-reduced-motion: reduce) {
  .service-card .body img.icon {
    -webkit-transition: none;
    transition: none;
  }
}

.service-card .body .subtitle {
  position: absolute;
  bottom: -100%;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: all, 0.3s;
  transition: all, 0.3s;
}

@media (prefers-reduced-motion: reduce) {
  .service-card .body .subtitle {
    -webkit-transition: none;
    transition: none;
  }
}

.service-card:hover .body img.icon {
  margin-top: 5px;
  width: 45px;
  margin-bottom: 15px;
}

.service-card:hover .body .subtitle {
  bottom: 7px;
  opacity: 1;
  visibility: visible;
}

/*/ portfolio wrapper */
.portfolio-card {
  display: block;
  position: relative;
  overflow: hidden;
}

.portfolio-card .portfolio-card-img {
  width: 100%;
}

.portfolio-card .portfolio-card-overlay {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  text-align: center;
  visibility: hidden;
  opacity: 0;
  background-image: -webkit-linear-gradient(bottom, #e1dfed 0%, rgba(225, 223, 237, 0.7) 99%, rgba(225, 223, 237, 0.8) 100%);
  background-image: linear-gradient(to top, #e1dfed 0%, rgba(225, 223, 237, 0.7) 99%, rgba(225, 223, 237, 0.8) 100%);
  -webkit-transition: all, 0.3s;
  transition: all, 0.3s;
  width: 0;
  height: 0;
  border-radius: 50%;
  overflow: hidden;
}

@media (prefers-reduced-motion: reduce) {
  .portfolio-card .portfolio-card-overlay {
    -webkit-transition: none;
    transition: none;
  }
}

.portfolio-card .portfolio-card-overlay .portfolio-card-caption {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
  width: 100%;
}

.portfolio-card:hover .portfolio-card-overlay {
  opacity: 1;
  visibility: visible;
  width: 100%;
  height: 100%;
  border-radius: 0;
}

@media (max-width: 767.98px) {
  .portfolio-card {
    margin-bottom: 30px;
  }
  .service-card {
    margin-bottom: 30px;
  }
}

/* Pricing card */
.pricing-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
}

.pricing-wrapper .pricing-card {
  display: block;
  border: 1px solid #dee2e6;
  padding: 30px 15px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
  -webkit-flex-basis: 0;
      -ms-flex-preferred-size: 0;
          flex-basis: 0;
  background: #fff;
  -webkit-transition: all, 0.3s;
  transition: all, 0.3s;
}

@media (prefers-reduced-motion: reduce) {
  .pricing-wrapper .pricing-card {
    -webkit-transition: none;
    transition: none;
  }
}

.pricing-wrapper .pricing-card-header .pricing-card-icon {
  width: 70px;
  margin-bottom: 25px;
}

.pricing-wrapper .pricing-card-footer {
  margin: 15px 0;
}

.pricing-wrapper .pricing-card-footer span {
  font-size: calc(18px + (35 - 18) * ((100vw - 300px) / (1300 - 300)));
  font-weight: 600;
  opacity: .8;
}

.pricing-wrapper .pricing-card-footer span:first-child {
  position: relative;
  right: -6px;
  top: -6px;
  font-size: calc(15px + (25 - 15) * ((100vw - 300px) / (1300 - 300)));
}

.pricing-wrapper .pricing-card-title {
  margin-bottom: 15px;
  font-size: calc(18px + (35 - 18) * ((100vw - 300px) / (1300 - 300)));
}

.pricing-wrapper .pricing-card-list p {
  margin-bottom: 12px;
  font-weight: 500;
  opacity: .6;
}

.pricing-wrapper .pricing-card-list p i {
  color: #ec185d;
}
/* ... */

